--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+      <link rel="stylesheet" href="/css/materialize/css/materialize.min.css">
 
       <link href="/css/m12_style.css" rel="stylesheet" type="text/css">
   </head>
