--- a/resources/public/cards.html
+++ b/resources/public/cards.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <link href="/css/m12_style.css" rel="stylesheet" type="text/css">
+    <link href="/css/compiled/m12.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <script src="/js/keithwhor-audiosynth-2e26f29/audiosynth.js"></script>
