--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-      <link href="/css/m12_style.css" rel="stylesheet" type="text/css">
+      <link href="/css/compiled/m12.main.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="main-app-area"></div>
